Converted FmFolderView into generic interface.
All common code for FmFolderView, FmMainWin and FmDesktop moved into
new interface to avoid code duplication. All popups, common keyboard
shortcuts (including cut/copy/paste), and mouse left and right click
handlers will be in one place from now on.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -113,6 +113,7 @@ libfm_gtk_SOURCES = \
 	$(gtk_compat_SOURCES) \
 	$(exo_SOURCES) \
 	gtk/fm-folder-view.c \
+	gtk/fm-folder-exo-view.c \
 	gtk/fm-folder-model.c \
 	gtk/fm-places-view.c \
 	gtk/fm-places-model.c \
@@ -176,6 +177,7 @@ libfmgtkincludedir = $(includedir)/libfm/libfm
 libfmgtkinclude_HEADERS = \
 	fm-gtk.h \
 	gtk/fm-folder-view.h \
+	gtk/fm-folder-exo-view.h \
 	gtk/fm-folder-model.h \
 	gtk/fm-places-view.h \
 	gtk/fm-places-model.h \
