Removed glib-compat.h and gtk-compat.h from docs as it ought to be.

--- a/docs/reference/libfm/Makefile.am
+++ b/docs/reference/libfm/Makefile.am
@@ -92,6 +92,8 @@ IGNORE_HFILES= \
 	exo-string.h \
 	exo-tree-view.h \
 	fm-actions.h \
+	glib-compat.h \
+	gtk-compat.h \
 	$(NULL)
 
 # Images to copy into HTML directory.
