--- a/libfm-gtk.pc.in
+++ b/libfm-gtk.pc.in
@@ -8,4 +8,4 @@ Description: A glib/gio-based lib used to develop file managers providing some f
 Requires: gtk+-2.0 >= 2.18.0 gthread-2.0 gio-unix-2.0 libfm >= @VERSION@
 Version: @VERSION@
 Libs: -L${libdir} -lfm-gtk
-Cflags: -I${includedir}/libfm
+Cflags: @FMINCLUDEADD@
