--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -142,7 +142,7 @@ libfm_gtk_SOURCES = \
 	gtk/fm-gtk-marshal.c \
 	$(NULL)
 
-libfmincludedir = $(includedir)/libfm/libfm
+libfmincludedir = $(includedir)/@PACKAGE@-@FMLIBVER@
 libfminclude_HEADERS = \
 	fm.h \
 	base/fm-config.h \
@@ -173,7 +173,7 @@ libfminclude_HEADERS = \
 	job/fm-file-ops-job-change-attr.h \
 	$(NULL)
 
-libfmgtkincludedir = $(includedir)/libfm/libfm
+libfmgtkincludedir = $(includedir)/@PACKAGE@-@FMLIBVER@
 libfmgtkinclude_HEADERS = \
 	fm-gtk.h \
 	gtk/fm-folder-view.h \
@@ -407,3 +407,17 @@ noinst_PROGRAMS=xml-purge
 xml_purge_SOURCES=xml-purge.c
 xml_purge_CFLAGS=$(GIO_CFLAGS)
 xml_purge_LDADD=$(GIO_LIBS)
+
+install-data-local:
+	@if test -h $(DESTDIR)$(includedir)/@PACKAGE@; then \
+		echo rm -f $(DESTDIR)$(includedir)/@PACKAGE@; \
+		rm -f $(DESTDIR)$(includedir)/@PACKAGE@; \
+	fi
+	@LN_S@ @PACKAGE@-@FMLIBVER@ $(DESTDIR)$(includedir)/@PACKAGE@
+
+uninstall-local:
+	@if test -L $(DESTDIR)$(includedir)/@PACKAGE@; then \
+		echo rm -f $(DESTDIR)$(includedir)/@PACKAGE@; \
+		rm -f $(DESTDIR)$(includedir)/@PACKAGE@; \
+	fi
+	-rmdir $(libfmincludedir)
