--- a/libfm.pc.in
+++ b/libfm.pc.in
@@ -8,4 +8,4 @@ Description: A glib/gio-based lib used to develop file managers providing some f
 Requires: gthread-2.0 gio-unix-2.0 glib-2.0 >= 2.22.0
 Version: @VERSION@
 Libs: -L${libdir} -lfm
-Cflags: -I${includedir}/libfm
+Cflags: @FMINCLUDEADD@
