--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ fm*-marshal.[ch]
 src/actions/*.[ch]
 *.1
 *.desktop
+src/libfm-demo
 src/libfm-pref-apps
 src/tests/fm-path
 src/vapi/fm-actions.vapi
