--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -11,6 +11,7 @@ src/base/fm-path.c
 src/base/fm-mime-type.c
 src/gtk/fm-progress-dlg.c
 src/gtk/fm-file-properties.c
+src/gtk/fm-places-model.c
 src/gtk/fm-places-view.c
 src/gtk/fm-side-pane.c
 src/gtk/fm-file-menu.c
@@ -28,7 +29,5 @@ src/job/fm-file-ops-job-delete.c
 src/job/fm-file-ops-job-xfer.c
 src/tools/libfm-pref-apps.c
 data/libfm-pref-apps.desktop.in
-
-src/gtk/fm-places-model.c
 src/udisks/g-udisks-device.c
-src/gtk/fm-side-pane.c
+src/vfs/fm-vfs-menu.c
