Both libfm-gtk.pc and libfm-gtk3.pc should be installed.

--- a/Makefile.am
+++ b/Makefile.am
@@ -29,6 +29,7 @@ EXTRA_DIST += \
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = \
 	libfm.pc \
+	libfm-gtk.pc \
 	libfm-gtk3.pc \
 	$(NULL)
 
