--- a/src/fm.h.in
+++ b/src/fm.h.in
@@ -22,6 +22,15 @@
 #ifndef __LIBFM_FM_H__
 #define __LIBFM_FM_H__
 
+#define FM_VERSION_MAJOR @FM_VERSION_MAJOR@
+#define FM_VERSION_MINOR @FM_VERSION_MINOR@
+#define FM_VERSION_MICRO @FM_VERSION_MICRO@
+
+#define FM_CHECK_VERSION(_a,_b,_c) \
+    (FM_VERSION_MAJOR > _a || \
+    (FM_VERSION_MAJOR == _a && FM_VERSION_MINOR > _b) || \
+    (FM_VERSION_MAJOR == _a && FM_VERSION_MINOR == _b && FM_VERSION_MICRO >= _c))
+
 #include "fm-app-info.h"
 #include "fm-archiver.h"
 #include "fm-bookmarks.h"
