--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -31,3 +31,4 @@ src/tools/libfm-pref-apps.c
 data/libfm-pref-apps.desktop.in
 src/udisks/g-udisks-device.c
 src/vfs/fm-vfs-menu.c
+src/vfs/fm-vfs-search.c
