Fixed installation with --disable-actions (https://bugs.gentoo.org/show_bug.cgi?id=436058)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -448,15 +448,16 @@ xml_purge_CFLAGS=$(GIO_CFLAGS)
 xml_purge_LDADD=$(GIO_LIBS)
 
 install-data-local:
-	@if test -e $(DESTDIR)$(includedir)/@PACKAGE@; then \
-		echo rm -rf $(DESTDIR)$(includedir)/@PACKAGE@; \
-		rm -rf $(DESTDIR)$(includedir)/@PACKAGE@; \
+	@if test -e "$(DESTDIR)$(includedir)/@PACKAGE@"; then \
+		echo rm -rf "$(DESTDIR)$(includedir)/@PACKAGE@"; \
+		rm -rf "$(DESTDIR)$(includedir)/@PACKAGE@"; \
 	fi
-	@LN_S@ @PACKAGE@-@FMLIBVER@ $(DESTDIR)$(includedir)/@PACKAGE@
+	test -z "$(includedir)" || $(MKDIR_P) "$(DESTDIR)$(includedir)"
+	@LN_S@ @PACKAGE@-@FMLIBVER@ "$(DESTDIR)$(includedir)/@PACKAGE@"
 
 uninstall-local:
-	@if test -L $(DESTDIR)$(includedir)/@PACKAGE@; then \
-		echo rm -f $(DESTDIR)$(includedir)/@PACKAGE@; \
-		rm -f $(DESTDIR)$(includedir)/@PACKAGE@; \
+	@if test -L "$(DESTDIR)$(includedir)/@PACKAGE@"; then \
+		echo rm -f "$(DESTDIR)$(includedir)/@PACKAGE@"; \
+		rm -f "$(DESTDIR)$(includedir)/@PACKAGE@"; \
 	fi
-	-rmdir $(libfmincludedir)
+	-rmdir "$(DESTDIR)$(libfmincludedir)"
