Adding ATK description for FmTabLabel widget.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,3 +1,4 @@
+data/libfm-pref-apps.desktop.in
 data/ui/app-chooser.glade
 data/ui/ask-rename.glade
 data/ui/file-prop.glade
@@ -5,32 +6,32 @@ data/ui/progress.glade
 data/ui/preferred-apps.glade
 data/ui/exec-file.glade
 data/ui/filesearch.glade
-src/base/fm-utils.c
 src/base/fm-file-info.c
 src/base/fm-file-launcher.c
 src/base/fm-path.c
 src/base/fm-mime-type.c
-src/gtk/fm-progress-dlg.c
+src/base/fm-utils.c
+src/gtk/fm-app-chooser-combo-box.c
+src/gtk/fm-app-chooser-dlg.c
+src/gtk/fm-app-menu-view.c
+src/gtk/fm-dir-tree-model.c
+src/gtk/fm-dnd-dest.c
+src/gtk/fm-file-menu.c
 src/gtk/fm-file-properties.c
+src/gtk/fm-folder-model.c
+src/gtk/fm-folder-view.c
+src/gtk/fm-gtk-file-launcher.c
+src/gtk/fm-gtk-utils.c
 src/gtk/fm-places-model.c
 src/gtk/fm-places-view.c
+src/gtk/fm-progress-dlg.c
 src/gtk/fm-side-pane.c
-src/gtk/fm-file-menu.c
-src/gtk/fm-dnd-dest.c
-src/gtk/fm-app-chooser-dlg.c
-src/gtk/fm-app-chooser-combo-box.c
 src/gtk/fm-standard-view.c
-src/gtk/fm-folder-view.c
-src/gtk/fm-app-menu-view.c
-src/gtk/fm-gtk-utils.c
-src/gtk/fm-gtk-file-launcher.c
-src/gtk/fm-dir-tree-model.c
-src/gtk/fm-folder-model.c
+src/gtk/fm-tab-label.c
 src/job/fm-dir-list-job.c
 src/job/fm-file-ops-job-delete.c
 src/job/fm-file-ops-job-xfer.c
 src/tools/libfm-pref-apps.c
-data/libfm-pref-apps.desktop.in
 src/udisks/g-udisks-device.c
 src/vfs/fm-vfs-menu.c
 src/vfs/fm-vfs-search.c
