New class FmTerminal for easy terminal configuration.
New class FmTerminal gets terminal options from configuration file
and then allow to substitute options for applications which should be
opened in terminal. Therefore no incorrect '-e %s' arguments in the
libfm.conf 'terminal' statement anymore.
Some terminals require different options so let libfm handle that.
Also this config allows implementation of 'Leave terminal window open'.

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -23,6 +23,7 @@ desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 libfmdatafilesdir = $(datadir)/libfm
 libfmdatafiles_DATA = \
 	archivers.list \
+	terminals.list \
 	$(NULL)
 
 EXTRA_DIST= \
