--- a/src/fm.h.in
+++ b/src/fm.h.in
@@ -49,6 +49,7 @@
 #include "fm-file-launcher.h"
 #include "fm-thumbnailer.h"
 #include "fm-file.h"
+#include "fm-terminal.h"
 #include "fm-deep-count-job.h"
 #include "fm-dir-list-job.h"
 #include "fm-file-info-job.h"
