Initial draft of FmTemplate class implementation.
The commit adds GUI-independent part of templates support.
GUI may use new API to:
- create popup 'Create new...' with list of choices;
- create window to prompt for new creating file name;
- launch new file creation from template.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -10,6 +10,7 @@ src/base/fm-file-info.c
 src/base/fm-file-launcher.c
 src/base/fm-path.c
 src/base/fm-mime-type.c
+src/base/fm-templates.c
 src/base/fm-terminal.c
 src/base/fm-utils.c
 src/gtk/fm-app-chooser-combo-box.c
