Adding missed #include "fm-templates.h" into fm.h.

--- a/src/fm.h.in
+++ b/src/fm.h.in
@@ -50,6 +50,7 @@
 #include "fm-thumbnailer.h"
 #include "fm-file.h"
 #include "fm-terminal.h"
+#include "fm-templates.h"
 #include "fm-deep-count-job.h"
 #include "fm-dir-list-job.h"
 #include "fm-file-info-job.h"
