Desktop entry file properties extension (very basic funcs for now).
Added desktop entry file properties extension, very basic functions for
now - editable data are Name, Comment, Exec, and Terminal. Button to
find executable doesn't work yet, icon selection either. Advanced data
isn't implemented yet. The work to be continued...

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -145,6 +145,7 @@ libfm_gtk_SOURCES = \
 	gtk/fm-thumbnail.c \
 	gtk/fm-tab-label.c \
 	gtk/fm-path-bar.c \
+	gtk/fm-dentry-properties.c \
 	gtk/fm-gtk-marshal.c \
 	$(NULL)
 
