Icon choosing dialog for desktop entry properties dialog.
Adding icon chooser, code is taken from lxshortcut, the UI file taken
from the same project. Unfortunately it becomes broken after editing by
glade therefore no compression applied and pushed into GIT as is.

--- a/data/ui/Makefile.am
+++ b/data/ui/Makefile.am
@@ -16,6 +16,7 @@ ui_DATA = $(ui_in_files:.glade=.ui)
 EXTRA_DIST = \
 	$(ui_in_files) \
 	$(ui_DATA) \
+	choose-icon.ui \
 	$(NULL)
 
 # Purge GtkBuilder UI files
