Fix: file choose-icon.ui was missed on install.

--- a/data/ui/Makefile.am
+++ b/data/ui/Makefile.am
@@ -11,7 +11,7 @@ ui_in_files= \
 	exec-file.glade \
 	filesearch.glade \
 	$(NULL)
-ui_DATA = $(ui_in_files:.glade=.ui)
+ui_DATA = $(ui_in_files:.glade=.ui) choose-icon.ui
 
 EXTRA_DIST = \
 	$(ui_in_files) \
