--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -76,6 +76,7 @@ base_SOURCES = \
 	base/fm-file.c \
 	base/fm-terminal.c \
 	base/fm-templates.c \
+	base/fm-xml-parser.c \
 	base/fm-marshal.c \
 	vfs/fm-vfs-menu.c \
 	vfs/fm-vfs-search.c \
@@ -172,6 +173,7 @@ libfminclude_HEADERS = \
 	base/fm-terminal.h \
 	base/fm-templates.h \
 	base/fm-thumbnail-loader.h \
+	base/fm-xml-parser.h \
 	base/fm-marshal.h \
 	job/fm-job.h \
 	job/fm-simple-job.h \
