Namespace change: FmXmlParser -> FmXmlFile (believe latter is better).
Since the FmXmlParser is not just a parser but also a composer for XML file,
it should have more appropriate name (see the GKeyFile for example).
Therefore namespaces change. Appropriate functions changed too.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -76,7 +76,7 @@ base_SOURCES = \
 	base/fm-file.c \
 	base/fm-terminal.c \
 	base/fm-templates.c \
-	base/fm-xml-parser.c \
+	base/fm-xml-file.c \
 	base/fm-marshal.c \
 	vfs/fm-vfs-menu.c \
 	vfs/fm-vfs-search.c \
@@ -173,7 +173,7 @@ libfminclude_HEADERS = \
 	base/fm-terminal.h \
 	base/fm-templates.h \
 	base/fm-thumbnail-loader.h \
-	base/fm-xml-parser.h \
+	base/fm-xml-file.h \
 	base/fm-marshal.h \
 	job/fm-job.h \
 	job/fm-simple-job.h \
