--- a/libfm-extra.pc.in
+++ b/libfm-extra.pc.in
@@ -3,7 +3,7 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
 
-Name: libfm
+Name: libfm-extra
 Description: A glib/gio-based lib used to develop file managers providing some file management utilities.
 Requires: gthread-2.0 gio-unix-2.0 glib-2.0 >= 2.22.0
 Version: @VERSION@
